--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <title>Simple Map App</title>
   </head>
   <body>
     <noscript>
@@ -14,4 +14,7 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
+  <footer class="footer-copyright text-center py-3 bg-white text-primary">© 2020 Aleksander Peev 
+    <a class="px-2 py-1 mr-2 rounded"href="https://www.instagram.com/alexpeev9/" target="_blank"> <i class="fa fa-instagram"></i> alexpeev9</a>
+  </footer>
 </html>
